# structures

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  doc.config
apps/android/: AndroidManifest.xml  AndroidSupport.cpp  CMakeLists.txt  native-activity.h
apps/android/java/ua/ho/mudryy/structures/: MainActivity.java
apps/android/jni/: Android.mk
apps/android/res/values/: strings.xml
apps/android/src/com/here/geoviz/: GeoVizActivity.java  GeoVizView.java
apps/android_tmp/: AndroidManifest.xml  app_glue.cpp
apps/android_tmp/jni/: Android.mk  Application.mk
apps/android_tmp/res/layout/: activity_run_unittests.xml
apps/android_tmp/src/com/structures/unittests/: RunUnittests.java
apps/android_unittest/: AndroidManifest.xml  android.properties  app_glue.cpp  app_glue.cpp.save  build.xml  gdb.setup
apps/android_unittest/jni/: Android.mk  Android.mk.save
apps/android_unittest/res/layout/: activity_run_unittest.xml
apps/android_unittest/src/com/structures/unittest/: Launcher.java  TestRunner.java
apps/android_unittest/src/com/structures/unittests/: ActivityStart.java  NativeTester.java  TestRunner.java
apps/runner/: main.cpp
cmake/: AndroidConfig.cmake  CodeCoverageConfig.cmake  CreateApk.cmake  EmscriptenConfig.cmake  FindGlm.cmake  FindGtest.cmake  FindSoil.cmake  emscriptenConfig.cmake
cmake/toolchains/: Android.cmake
include/: timer.h
include/linkedlist/: linkedlist.h
include/map/: map.h
include/node/: node.cpp  node.h
include/queue/: queue.h
include/sort/: sort.h
include/stack/: stack.h
include/unionfind/: unionfind.h
scripts/: android.sh  emcmake.sh  linux.sh  unittest_android.sh
src/: CMakeLists.txt  main.cpp  timer.cpp
src/unionfind/: unionfind.cpp
tests/: CMakeLists.txt
tests/data/shaders/: fragment.shader  fragment330.shader  vertex.shader  vertex330.shader
tests/testtools/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  ShaderManager.cpp  ShaderManager.h  ShaderManager.h.autosave  TextrueManager.cpp  TextureManager.h  bmp_generator.cpp  bmp_generator.h  timer.cpp  timer.h
tests/unittests/: CMakeLists.txt  OffscreenRenderTest.cpp  TestAntialiasedVolumetricLinies.cpp  TestByteStrucs.cpp  TestLinkedList.cpp  TestMap.cpp  TestNode.cpp  TestQueue.cpp  TestSimpleOpenGlimpl.cpp  TestSort.cpp  TestStack.cpp  TestUnionFind.cpp  TestWindow.cpp  TestWrapper.h
