project(Structures CXX)

set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../include")

file(GLOB_RECURSE HEADERS "${INCLUDE_DIR}/*.h")
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

set(SOURCES
    ${HEADERS}
    ${SOURCES}
)

include_directories(
    ${INCLUDE_DIR}
	${EMSC_INCLUDE}
)

add_library(${PROJECT_NAME} ${SOURCES})

install(TARGETS ${PROJECT_NAME}
    COMPONENT dev
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
)
install(DIRECTORY ${INCLUDE_DIR} DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT dev)
