project(Structures CXX)

set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../include")

set(file_content
"#pragma once\n
#define STRUCTURES_VERSION_MAJOR ${VERSION_MAJOR}
#define STRUCTURES_VERSION_MINOR ${VERSION_MINOR}
#define STRUCTURES_VERSION_PATCH ${VERSION_PATCH}"
)
set(VERSION_DIR ${CMAKE_BINARY_DIR}/include)
file(WRITE ${VERSION_DIR}/Version.h ${file_content})

file(GLOB_RECURSE HEADERS "${INCLUDE_DIR}/*.h" "${VERSION_DIR}/*.h")
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

set(SOURCES
    ${HEADERS}
    ${SOURCES}
)

include_directories(
    ${INCLUDE_DIR}
    ${VERSION_DIR}
	${EMSC_INCLUDE}
)

add_library(${PROJECT_NAME} ${SOURCES})

install(TARGETS ${PROJECT_NAME}
    COMPONENT dev
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
)
install(DIRECTORY ${INCLUDE_DIR} DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT dev)
install(DIRECTORY ${VERSION_DIR} DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT dev)