project(Structures.TestTools)

file(GLOB_RECURSE TEST_TOOLS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE TEST_TOOLS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

set(TOOLS_SOURCES
    ${TEST_TOOLS_HEADERS}
    ${TEST_TOOLS_SOURCES}
    ${GLM}
    ${SOIL}
)

include_directories(
	${GLM}
	${CMAKE_CURRENT_SOURCE_DIR}
)

add_library(${PROJECT_NAME} ${TOOLS_SOURCES})

set(TEST_TOOLS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})